--- a/Makefile.in
+++ b/Makefile.in
@@ -55,8 +55,8 @@ $(REQUIRED):
 
 PRGMS: $(STANDALONE_PRGM)
 	$(MAKE) FILELIST="$^" DIRLOC=$(BIN)    __installMe
-	for i in $^; do       \
-	  j=`basename $$i`
+	for i in $^; do                     \
+	  j=`basename $$i`;                 \
 	  if [[ $$j =~ .$(QUEUE_T) ]]; then \
 	    k=$(DESTDIR)$(BIN)$$j;          \
             fn=`basename  $$k .$(QUEUE_T)`; \
