--- a/Makefile.in
+++ b/Makefile.in
@@ -12,12 +12,16 @@ STANDALONE_PRGM := bin/build_env.pl  bin/checkExec.in bin/parseLDD.in  bin/getmo
 VDATE		:= $(shell date +'%F %H:%M')
 
 REQUIRED_PKGS   :=                \
+	           Dbg            \
+                   Optiks         \
+                   Optiks_Option  \
 	           capture        \
 	           fileOps        \
 	           serializeTbl   \
 	           strict         \
 	           string_split   \
 	           string_trim    \
+                   VarDump        \
 
 REQUIRED        := $(patsubst %, $(DESTDIR)$(BIN)/%.lua, $(REQUIRED_PKGS))
 
