added pairsByKeys to required packages

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,6 +17,7 @@ REQUIRED_PKGS   :=                \
                    Optiks_Option  \
 	           capture        \
 	           fileOps        \
+                   pairsByKeys    \
 	           serializeTbl   \
 	           strict         \
 	           string_split   \
