--- a/Makefile.in
+++ b/Makefile.in
@@ -12,6 +12,7 @@ STANDALONE_PRGM := bin/build_env.pl  bin/checkExec.in bin/parseLDD.in  bin/getmo
 VDATE		:= $(shell date +'%F %H:%M')
 
 REQUIRED_PKGS   :=                \
+                   BeautifulTbl   \
 	           Dbg            \
                    Optiks         \
                    Optiks_Option  \
