added Lariat Support to ibrun.symm

--- a/Makefile.in
+++ b/Makefile.in
@@ -73,7 +73,7 @@ PRGMS: $(STANDALONE_PRGM)
 	done
 
 makefile: Makefile.in config.status
-	config.status $@
+	./config.status $@
 
 config.status:
 	./config.status --recheck
