--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,7 @@ DIRLIST		:= $(DESTDIR)$(BIN)
 MAINDIR         := configure.ac Makefile.in configure
 STANDALONE_PRGM := bin/build_env.pl  bin/checkExec.in bin/parseLDD.in  bin/getmode.sh  \
                    bin/ibrun.sge bin/ibrun.slurm bin/tacc_affinity.sge bin/tacc_rsh \
-                   bin/readRMap.lua bin/ibrun.symm
+                   bin/tacc_affinity.sge bin/readRMap.lua bin/ibrun.symm
 VDATE		:= $(shell date +'%F %H:%M')
 
 REQUIRED_PKGS   :=                \
