--- a/bin/checkExec.in
+++ b/bin/checkExec.in
@@ -274,7 +274,7 @@ function options()
       name   = {'-m','--reverseMap', '--map'},
       dest   = 'reverseMapD',
       action = 'store',
-      help   = "reverseMap directory",
+      help   = "reverseMap directorys",
    }
 
    local optionTbl, pargs = cmdlineParser:parse(arg)
