send error message to stderr

--- a/bin/checkExec.in
+++ b/bin/checkExec.in
@@ -183,7 +183,7 @@ function main()
    local ldd = capture("ldd "..execPath)
 
    if (checkForMissingLibraries(ldd)) then
-      io.stdout:write("******************************************************\n",
+      io.stderr:write("******************************************************\n",
                       " There are missing shared libraries \n",
                       "******************************************************\n")
       dbg.fini()
@@ -219,7 +219,7 @@ function main()
    end
    
    if (sysT.mpi ~= execT.mpi and sysT.mpi and execT.mpi) then
-      io.stdout:write("*******************************************************\n",
+      io.stderr:write("*******************************************************\n",
                       " WARNING: Your MPI Environment is :       ",sysT.mpi, "\n",
                       "          Your executable was built with: ",execT.mpi,"\n",
                       "*******************************************************\n")
@@ -240,7 +240,7 @@ function main()
    if (not found ) then
       local compStr = concatTbl(execT.compA, " or ")
       if (sysT.comp and compStr) then
-         io.stdout:write("*******************************************************\n",
+         io.stderr:write("*******************************************************\n",
                          " WARNING: Your Compiler Environment is :  ",sysT.comp,"\n",
                          "          Your executable was built with: ",compStr,  "\n",
                          "*******************************************************\n")
